--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ class SimpleGame extends netplayjs.Game {
     // Fill with black.
     ctx.fillStyle = "black";
     ctx.fillRect(0, 0, canvas.width, canvas.height);
+    ctx.requestFullscreen();
 
     // Draw squares for the players.
     ctx.fillStyle = "red";
