--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ class SimpleGame extends netplayjs.Game {
   // Draw the state of our game onto a canvas.
   draw(canvas) {
     const ctx = canvas.getContext("2d");
-    console.log(ctx);
+    console.log(ctx.canvas);
 
     // Fill with black.
     ctx.fillStyle = "black";
