--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect 4 Multiplayer</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/netplayjs@0.4.1/dist/netplay.js"></script>
+    <script src="./netplay.js"></script>
 </head>
 <body>
     <div id="board"></div>
