--- a/index.html
+++ b/index.html
@@ -5,58 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect 4 Multiplayer</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./netplay.js"></script>
+    <script src="https://unpkg.com/netplayjs@0.4.1/dist/netplay.js"></script>
 </head>
 <body>
     <div id="board"></div>
-    <button id="startGame">Start Game</button>
     <div id="win"></div>
-    <script>
-class SimpleGame extends netplayjs.Game {
+
+
+
+
+
+<script>
+class connectFour extends netplayjs.Game {
+  // In the constructor, we initialize the state of our game.
   constructor() {
     super();
-    this.aPos = { x: 100, y: 150 };
-    this.bPos = { x: 500, y: 150 };
-    this.cPos = { x: 300, y: 150 };
+    // Initialize our player positions.
+    createBoard();
   }
 
+  // The tick function takes a map of Player -> Input and
+  // simulates the game forward. Think of it like making
+  // a local multiplayer game with multiple controllers.
   tick(playerInputs) {
     for (const [player, input] of playerInputs.entries()) {
+      // Generate player velocity from input keys.
       const vel = input.arrowKeys();
+
+      // Apply the velocity to the appropriate player.
       if (player.getID() == 0) {
         this.aPos.x += vel.x * 5;
         this.aPos.y -= vel.y * 5;
       } else if (player.getID() == 1) {
         this.bPos.x += vel.x * 5;
         this.bPos.y -= vel.y * 5;
-      } else if (player.getID() == 2) { // Corrected player ID for third player
-        this.cPos.x += vel.x * 5;
-        this.cPos.y -= vel.y * 5;
       }
+      console.log(player.getID() + "mau");
     }
   }
 
+  // Normally, we have to implement a serialize / deserialize function
+  // for our state. However, there is an autoserializer that can handle
+  // simple states for us. We don't need to do anything here!
+  // serialize() {}
+  // deserialize(value) {}
+
+  // Draw the state of our game onto a canvas.
   draw(canvas) {
-    const ctx = canvas.getContext("2d");
-    ctx.canvas.id = "myCanvas";
-    ctx.canvas.requestFullscreen();
-
-    ctx.fillStyle = "white";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    ctx.fillStyle = "red";
-    ctx.fillRect(this.aPos.x, this.aPos.y, 10, 10);
+    console.log(this.aPos);
     ctx.fillStyle = "blue";
-    ctx.fillRect(this.bPos.x, this.bPos.y, 10, 10);
-    ctx.fillStyle = "yellow";
-    ctx.fillRect(this.cPos.x, this.cPos.y, 10, 10);
+    ctx.fillRect(this.bPos.x - 5, this.bPos.y - 5, 10, 10);
+    console.log(this.bPos);
   }
 }
 
-SimpleGame.timestep = 1000 / 60;
-SimpleGame.canvasSize = { width: 300, height: 300 };
+connectFour.timestep = 1000 / 60; // Our game runs at 60 FPS
+connectFour.canvasSize = { width: 0, height: 0 };
 
-new netplayjs.RollbackWrapper(SimpleGame).start();
+// Because our game can be easily rewound, we will use Rollback netcode
+// If your game cannot be rewound, you should use LockstepWrapper instead.
+new netplayjs.RollbackWrapper(connectFour).start();
 </script>
+    <script src="main.js"></script>
 </body>
 </html>
