--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <script src="https://unpkg.com/netplayjs@0.4.1/dist/netplay.js"></script>
 </head>
 <body>
-    <div id="board"></div>
-    <div id="win"></div>
-
+    <div id="main">
+        <h1>Connect 4<h1>
+        <div id="board"></div>
+        <div id="win"></div>
+    </div>
 
 
 
