--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect 4 Multiplayer</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/netplayjs@0.4.1/dist/netplay.js"></script>
-    <script src="https://unpkg.com/konva@9/konva.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
 </head>
 <body>
     <div id="container">
